# GitCortex

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  RELEASING.md  _typos.toml  clippy.toml  deny.toml  dist-workspace.toml  mise.toml  rustfmt.toml
.cargo/: audit.toml  config.toml
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/agents/: gcx-go-tester.md  gcx-graph-evolver.md  gcx-java-tester.md  gcx-lang-tester.md  gcx-python-tester.md  gcx-typescript-tester.md  kuzu-cypher.md  rust-build-fixer.md  rust-reviewer.md  token-benchmark.md
.claude/commands/dev/: gcx-self.md  release-check.md  rust-precommit.md  token-benchmark.md
.claude/commands/gcx/: gcx-blast-radius.md  gcx-callers.md  gcx-file.md  gcx-lookup.md  gcx-search.md  gcx-tour.md  gcx-wiki.md
.claude/hooks/post-tool-use/: cargo-check.sh  file-size.sh  rule-guard.sh  rustfmt.sh
.claude/hooks/pre-tool-use/: gcx-context.sh
.claude/skills/gcx/: debugging.md  explaining.md  exploring.md  impact-analysis.md  onboarding.md  refactoring.md
.claude/skills/gcx-dev/: add-language-parser.md  add-mcp-tool.md  ci-debugger.md  lang-go.md  lang-java.md  lang-python.md  lang-typescript.md  release-gcx.md
.config/: nextest.toml
.cursor/: mcp.json
.cursor/rules/: gitcortex.mdc
.gitcortex/: AGENT_GUIDE.md  config.toml  context.md  ignore
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  publish-npm.yml  publish-pypi.yml  publish.yml  release.yml  viz-ci.yml
crates/gitcortex-cli/: Cargo.toml
crates/gitcortex-cli/src/: main.rs  style.rs
crates/gitcortex-cli/src/cmd/: blast_radius.rs  clean.rs  doctor.rs  export.rs  mod.rs  query.rs  serve.rs  status.rs  update.rs
crates/gitcortex-cli/src/cmd/init/: detect.rs  mod.rs  universal.rs
crates/gitcortex-cli/src/cmd/init/editors/: codex.rs  mod.rs  windsurf.rs
crates/gitcortex-core/: Cargo.toml  README.md
crates/gitcortex-core/src/: error.rs  graph.rs  lib.rs  schema.rs  store.rs
crates/gitcortex-indexer/: Cargo.toml  README.md
crates/gitcortex-indexer/src/: differ.rs  indexer.rs  lib.rs
crates/gitcortex-indexer/src/parser/: complexity.rs  deftext.rs  go.rs  java.rs  markdown.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/gitcortex-indexer/src/parser/queries/: rust.scm
crates/gitcortex-mcp/: Cargo.toml  build.rs
crates/gitcortex-mcp/dist-viz/: index.html
crates/gitcortex-mcp/dist-viz/assets/: main.css  main.js  webgl-device.js
crates/gitcortex-mcp/src/: embeddings.rs  lib.rs  main.rs
crates/gitcortex-mcp/src/assets/: viz.html
crates/gitcortex-mcp/src/cmd/: blast_radius.rs  clean.rs  doctor.rs  export.rs  hook.rs  init.rs  mod.rs  query.rs  serve.rs  status.rs  update.rs  viz.rs
crates/gitcortex-mcp/src/cmd/init/: detect.rs  helpers.rs  mod.rs  universal.rs
crates/gitcortex-mcp/src/cmd/init/editors/: antigravity.rs  claude.rs  copilot.rs  cursor.rs  mod.rs  windsurf.rs
crates/gitcortex-mcp/src/mcp/: agent.rs  centrality.rs  clustering.rs  git_helpers.rs  helpers.rs  hybrid.rs  mod.rs  params.rs  search.rs  server.rs  subgraph.rs  tools.rs  tour.rs  watcher.rs  wiki.rs
crates/gitcortex-mcp/tests/: full_pipeline.rs  search_eval.rs
crates/gitcortex-mcp/viz/: .prettierignore  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
crates/gitcortex-mcp/viz/src/: App.tsx  api.ts
crates/gitcortex-mcp/viz/src/components/: BranchPicker.tsx  CanvasControls.tsx  CosmosCanvas.tsx  FilterRail.tsx  Header.tsx  Inspector.tsx  KeyboardHelp.tsx  SearchPalette.tsx  StatusBar.tsx
crates/gitcortex-mcp/viz/src/graph/: density.ts
crates/gitcortex-mcp/viz/src/hooks/: useBranchDiff.ts
crates/gitcortex-mcp/viz/src/theme/: tokens.css
crates/gitcortex-store/: Cargo.toml  README.md
crates/gitcortex-store/src/: branch.rs  kuzu.rs  lib.rs  memory.rs  schema.rs
crates/gitcortex-store/src/kuzu/: bulk.rs  conv.rs  escape.rs  mod.rs  queries.rs  values.rs
crates/gitcortex-store/tests/: round_trip.rs
crates/gitcortex-viz/: Cargo.toml  build.rs
crates/gitcortex-viz/src/: lib.rs
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DEV_SETUP.md  REFERENCE.md  VIZ-ROADMAP.md  index.html
docs/adr/: 0001-graphstore-trait.md  0002-tokio-async-boundary.md  0003-cosmograph-renderer.md  0004-duckdb-cdn-runtime-dep.md  README.md
docs/benchmarks/: .gitignore  AGENT-BENCHMARK-PLAN.md  RELEASE-GATE.md  agent-retrieval-v1.md  bench-continue.sh  bench-harness.sh  claude-agent-gate-v1.md  codex-agent-gate-v1.md  codex-harness.sh  codex-sweep.sh  dev-cobra.json  dev-django.json  dev-gson.json  dev-harness.sh  dev-hono.json  dev-requests.json  dev-ripgrep.json  final-report-2026-06-06.html  final-report-2026-06-19.html  final-report-2026-07-12.html  final-report-2026-07-17.html  final-report.html  final-report.py  go-cobra.json  go-gin.json  go-zap.json  java-gson.json  java-jjwt.json  java-picocli.json  loop-sweep.sh  python-fastapi.json  python-flask.json  python-requests.json  real-harness.sh  real-report.py  real-sweep.sh  report.py  rust-ripgrep.json  rust-serde.json  rust-tokio.json  (+7 more)
docs/benchmarks/stable-v050/: r1-cobra.json  r1-gson.json  r1-hono.json  r1-requests.json  r1-ripgrep.json  r2-cobra.json  r2-gson.json  r2-hono.json  r2-requests.json  r2-ripgrep.json  r3-cobra.json  r3-gson.json  r3-hono.json  r3-requests.json  r3-ripgrep.json
docs/benchmarks/stable-v060/: r1-cobra.json  r1-gson.json  r1-hono.json  r1-requests.json  r1-ripgrep.json  r2-cobra.json  r2-gson.json  r2-hono.json  r2-requests.json  r2-ripgrep.json  r3-cobra.json  (+4 more)
hooks/: post-checkout  post-merge  pre-commit
python/: README.md  pyproject.toml
python/src/gitcortex/: __init__.py
scripts/: lang-smoke.sh
tools/agent-bench/: README.md  agent_report.py  agent_run.py  bench.py  suite.toml
viz/: .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
viz/src/: App.tsx  api.ts
(+79 files in other folders)
