[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitcortex"
dynamic = ["version"]
description = "Git-aware code knowledge graph — incremental AST indexing on every commit, MCP server for AI assistants"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
homepage = "https://github.com/bharath03-a/GitCortex"
keywords = ["mcp", "code-graph", "tree-sitter", "git", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/bharath03-a/GitCortex"
Repository = "https://github.com/bharath03-a/GitCortex"
"Bug Tracker" = "https://github.com/bharath03-a/GitCortex/issues"

[project.scripts]
gcx = "gitcortex:main"

[tool.hatch.version]
path = "src/gitcortex/__init__.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]+)['\"]"

[tool.hatch.build.targets.wheel]
packages = ["src/gitcortex"]
artifacts = ["src/gitcortex/_bin/*"]
