[package]
name = "gitcortex"
description = "Git-aware code knowledge graph — incremental AST indexing on every commit, MCP server for AI assistants"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"
homepage = "https://github.com/bharath03-a/GitCortex"
keywords = ["mcp", "code-graph", "tree-sitter", "claude", "ai"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "gcx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
gitcortex-core.workspace = true
gitcortex-indexer.workspace = true
gitcortex-mcp.workspace = true
gitcortex-store.workspace = true
gitcortex-viz.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
