[package]
name = "gitcortex-core"
description = "Shared graph types and GraphStore trait for GitCortex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["gitcortex", "code-graph", "ast", "knowledge-graph"]
categories = ["development-tools"]

[dependencies]
petgraph.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
