[package]
name = "gitcortex-indexer"
description = "Incremental AST indexer for GitCortex (tree-sitter, git2)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["gitcortex", "tree-sitter", "ast", "code-index"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
git2.workspace = true
gitcortex-core.workspace = true
ignore.workspace = true
rayon.workspace = true
tree-sitter.workspace            = true
tree-sitter-rust.workspace       = true
tree-sitter-python.workspace     = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-go.workspace         = true
