[package]
name = "gitcortex-indexer"
description = "Incremental AST indexer for GitCortex — tree-sitter parsing, git diff, parallel file indexing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["tree-sitter", "ast", "code-index", "git", "static-analysis"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
git2.workspace = true
gitcortex-core.workspace = true
ignore.workspace = true
rayon.workspace = true
tree-sitter.workspace            = true
tree-sitter-rust.workspace       = true
tree-sitter-python.workspace     = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-go.workspace         = true
tree-sitter-java.workspace       = true
