[package]
name = "gitcortex"
description = "Git-aware code knowledge graph — incremental AST indexing on every commit, MCP server for AI assistants"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["mcp", "code-graph", "tree-sitter", "claude", "ai"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "gcx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
gitcortex-core.workspace = true
gitcortex-indexer.workspace = true
gitcortex-store.workspace = true
open.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
