[package]
name = "gitcortex-mcp"
description = "MCP server library for GitCortex — exposes the knowledge graph via the Model Context Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
gitcortex-core.workspace = true
gitcortex-store.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
gitcortex-indexer.workspace = true
gitcortex-store.workspace = true
tempfile.workspace = true
