[package]
name = "gitcortex-store"
description = "KuzuDB-backed graph store for GitCortex — branch-namespaced, embedded, zero server process"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["kuzu", "graph-database", "code-graph", "embedded-database", "static-analysis"]
categories = ["development-tools", "database"]

[dependencies]
dashmap.workspace = true
gitcortex-core.workspace = true
kuzu.workspace = true

[dev-dependencies]
tempfile.workspace = true
